fix gap of labels

--- a/static/main.css
+++ b/static/main.css
@@ -64,7 +64,7 @@ label {
   padding: 6px;
   color: white;
   font-size: 14px;
-  border-radius: 5px;
+  border-radius: 6px;
   margin: 2px !important;
 }
 
